# spwidget

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: api.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  scheduler.rs  secrets.rs  state.rs
src-tauri/src/jira/: auth.rs  client.rs  fields.rs  flavor.rs  mod.rs  models.rs  search.rs
src/components/: issueList.ts
src/views/: setup.ts  widget.ts
